fix grid margin and add right gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
-p {
-    height: 100px;
-    min-width: 100px;
+p { 
+    height: 120px;
+    min-width: 120px;
     font-size: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0;
 }
 
 #bg_red {
